objects/Quick_Theme__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Account_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipName>CC_Account_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_CSS__c</fullName>
        <label>Custom CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Font_Family__c</fullName>
        <label>Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Logo_Height__c</fullName>
        <label>Footer Logo Height</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Logo_URL__c</fullName>
        <label>Footer Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Logo_Width__c</fullName>
        <label>Footer Logo Width</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Anonymous_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Anonymous Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Logo_Display_Preference__c</fullName>
        <label>Header Logo Display Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
                <value>
                    <fullName>Menu Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Font__c</fullName>
        <label>Import Font</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Height__c</fullName>
        <label>Logo Height</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Width__c</fullName>
        <label>Logo Width</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <label>Storefront</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Header_Logo_in_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Header Logo in Footer?</label>
        <type>Checkbox</type>
    </fields>
    <label>Quick Theme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quick Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>